# PyGPSClient

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  APPLAUNCH.md  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM_MAPS.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  RTK-TIPS.md  SECURITY.md  SPARTN.md  build.xml  colortags  pygpsclient.desktop  pygpsclient.json  pyproject.toml  requirements.txt  requirements_build.txt  setup.py  snapcraft.yaml  ubxpresets  userpresets  version.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: checkpr.yml  deploy.yml  main.yml
PyGPSClient.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
common/: __init__.py  serialconfig_frame.py
docs/: conf.py  index.rst  modules.rst  pygpsclient.rst
examples/: D9S_RXM_PMP.ubx  F9P_3D_printed_case.md  compareconfigs.py  convert_ubx_preset.py  device-dummy123-1234-1234-1234-abcdefghijkl-ucenter-config.json  f9p-basestation.py  f9p_basestation.py  georef.py  georef.tif  gpxviewer.py  json-config-load.py  libspatialite_compile.sh  mymap01.tif  mymap02.tif  mymap03.tif  ntrip_server.py  presets.py  pygpsclient_arch_install.sh  pygpsclient_debian_install.sh  pygpsclient_macos_install.sh  pygpsconfig_x20p_enableubx.ubx  python_compile.sh  retrieve_data.py  rxmpmp_extract_spartn.py  simpleRTK2B_FW113_Base-00.txt  simpleRTK2B_FW113_Base-00.txt.ubx  simpleRTK2B_FW132_Base-00.txt  simpleRTK2B_FW132_Rover_10Hz-00.txt  simpleRTK2B_FW132_Rover_1Hz-00.txt  socket_server.py  spartn_parser.py  tcpclient.py  tcpserver_threaded.py  testscroll.py  ttypresets_examples.py  txt2ubx.py  ubx_spatialite.py  ubxconfigload.py  ubxconfigsave.py  ubxsimulator.json
pygpsclient/: __init__.py  __main__.py  _version.py  about_dialog.py  app.py  banner_frame.py  console_frame.py  file_handler.py  filehandler.py  globals.py  gnss_status.py  gpx_dialog.py  graphview_frame.py  helpers.py  helpstrings.py  map_frame.py  menu_bar.py  mqtt_handler.py  nmea_handler.py  ntrip_client_dialog.py  ntrip_handler.py  rtcm3_handler.py  serial_handler.py  serialconfig_frame.py  settings_frame.py  skyview_frame.py  socket_handler.py  socket_server.py  socketconfig_frame.py  spartn_dialog.py  spartn_gnss_dialog.py  spartn_gnss_frame.py  spartn_lband_dialog.py  spartn_lband_frame.py  spartn_mqtt_dialog.py  spartn_mqtt_frame.py  spartnmessage.py  spectrum_frame.py  status_frame.py  stream_handler.py  (+16 more)
pygpsclient/resources/: pygpsclient.icns
src/pygpsclient/: __init__.py  __main__.py  _version.py  about_dialog.py  app.py  attitude_frame.py  banner_frame.py  canvas_map.py  canvas_plot.py  canvas_subclasses.py  chart_frame.py  configuration.py  confirm_box.py  console_frame.py  dialog_state.py  dynamic_config_frame.py  file_handler.py  globals.py  gnss_status.py  gpx_dialog.py  graphview_frame.py  hardware_info_frame.py  helpers.py  importmap_dialog.py  imu_frame.py  init_presets.py  levelsview_frame.py  map_canvas.py  map_frame.py  mapquest.py  mapquest_handler.py  menu_bar.py  nmea_config_dialog.py  nmea_handler.py  nmea_preset_frame.py  nmea_presets.py  ntrip_client_dialog.py  qgc_handler.py  receiver_config_handler.py  recorder_dialog.py  (+46 more)
src/pygpsclient/resources/pygpsclient.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_cli.py  test_configs.py  test_spartn_stream.py  test_static.py  test_tk.py  testsuite.py
