[build-system]
requires = ["setuptools>=66.0.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "pygpsclient"
authors = [
    {name = "semuadmin", email = "semuadmin@semuconsulting.com"},
]
maintainers = [
  {name = "semuadmin", email = "semuadmin@semuconsulting.com"}
]
description = "GNSS Diagnostic and UBX Configuration GUI Application"
version = "1.3.26"
license = {file = "LICENSE"}
keywords= [
    "PyGPSClient",
    "GNSS",
    "GPS",
    "GALILEO",
    "GLONASS",
    "BEIDOU",
    "NMEA",
    "UBX",
    "RTCM",
    "NTRIP",
    "SPARTN",
    "RTK",
    "DGPS",
    "u-center",
    ]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
    ]

dependencies = [
    "requests>=2.28.0",
    "Pillow>=9.0.0",
    "pygnssutils>=1.0.9",
    "pyserial>=3.5",
    "pyspartn>=0.1.6",
]

[project.scripts]
pygpsclient = "pygpsclient.__main__:main"

[project.urls]
homepage = "https://www.semuconsulting.com/pygpsclientgui"
documentation = "https://www.semuconsulting.com/pygpsclient/"
repository = "https://github.com/semuconsulting/PyGPSClient"
changelog = "https://github.com/semuconsulting/PyGPSClient/blob/master/RELEASE_NOTES.md"

[project.optional-dependencies]
deploy = [
    "build",
    "pip",
    "setuptools>=66.0.0",
    "wheel"
]
test = [
    "bandit",
    "black",
    "certifi",
    "isort",
    "pylint",
    "pytest",
    "pytest-cov",
    "Sphinx",
    "sphinx-rtd-theme",
]

[tool.black]
target-version = ['py37']

[tool.isort]
py_version = 37
profile = "black"

[tool.bandit]
exclude_dirs = ["docs", "examples", "tests"]
skips = ["B104","B318","B408"] # bind 0.0.0.0; minidom

[tool.pylint]
jobs = 0
reports = "y"
recursive = "y"
py-version = "3.7"
fail-under = "9.8"
fail-on = "E,F"
clear-cache-post-run = "y"
good-names="i,j,x,y"
disable = """
    raw-checker-failed,
    bad-inline-option,
    locally-disabled,
    file-ignored,
    suppressed-message,
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
    too-many-instance-attributes,
    too-many-branches,
    unused-private-member,
    too-few-public-methods,
    too-many-public-methods,
    too-many-locals,
    invalid-name
"""

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov --cov-report term-missing -p no:cacheprovider"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
