[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "pygpsclient"
dynamic = ["version"]
authors = [{ name = "Steve Smith", email = "semuadmin@semuconsulting.com" }]
maintainers = [{ name = "Steve Smith", email = "semuadmin@semuconsulting.com" }]
description = "GNSS Diagnostic and UBX Configuration GUI Application"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = [
    "PyGPSClient",
    "GNSS",
    "GPS",
    "GALILEO",
    "GLONASS",
    "BEIDOU",
    "NMEA",
    "UBX",
    "RTCM",
    "NTRIP",
    "SPARTN",
    "RTK",
    "DGPS",
    "u-center",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = ["requests>=2.28.0", "Pillow>=9.0.0", "pygnssutils>=1.1.20"]

[project.scripts]
pygpsclient = "pygpsclient.__main__:main"

[project.urls]
homepage = "https://github.com/semuconsulting/PyGPSClient"
documentation = "https://www.semuconsulting.com/pygpsclient/"
repository = "https://github.com/semuconsulting/PyGPSClient"
changelog = "https://github.com/semuconsulting/PyGPSClient/blob/master/RELEASE_NOTES.md"

[dependency-groups]
optional = ["rasterio", "cryptography"]
build = [
    "awscli",
    "build",
    "packaging>=24.2",
    "pip",
    "setuptools>=75.0.0",
    "twine>=6.1.0",
    "wheel",
]
test = [
    "bandit",
    "black",
    "certifi",
    "isort",
    "pylint",
    "pytest",
    "pytest-cov",
    "Sphinx",
    "sphinx-rtd-theme",
]
deploy = [{ include-group = "build" }, { include-group = "test" }]

[tool.setuptools.dynamic]
version = { attr = "pygpsclient._version.__version__" }

[tool.black]
target-version = ['py310']

[tool.isort]
py_version = 310
profile = "black"

[tool.bandit]
exclude_dirs = ["docs", "examples", "tests"]
skips = [
    "B104",
    "B311",
    "B318",
    "B404",
    "B408",
    "B603",
] # bind 0.0.0.0; randrange; minidom; subroutine

[tool.pylint]
jobs = 0
reports = "y"
recursive = "y"
py-version = "3.10"
fail-under = "9.9"
fail-on = "E,F"
clear-cache-post-run = "y"
good-names = "i,j,x,y"
disable = """
    raw-checker-failed,
    bad-inline-option,
    locally-disabled,
    file-ignored,
    suppressed-message,
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
    too-many-instance-attributes,
    unused-private-member,
    too-few-public-methods,
    too-many-public-methods,
    too-many-locals,
    invalid-name,
    logging-fstring-interpolation
"""

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov --cov-report html --cov-fail-under 18"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
fail_under = 18

[tool.coverage.html]
directory = "htmlcov"
